--- a/index.html
+++ b/index.html
@@ -1172,7 +1172,7 @@
     <div>
         <input id="inp" class="tasktxtclose" type="text" name="task" placeholder=" Search for events">
         <button class="plusdisplay" href="#"><i class="fas fa-search"></i></button>
-        <button class="closeboxclose"><i class="far fa-times-circle"></i></button>
+        <button class="closeboxhide"><i class="far fa-times-circle"></i></button>
         <ul id="query">
 
         </ul>
