--- a/index.html
+++ b/index.html
@@ -1274,7 +1274,7 @@
     <script src="demo.js"></script>
     <script src="demo3.js"></script>
     <script src="easings.js"></script>
-    <script src="events.js"></script>
+    <!-- <script src="events.js"></script> -->
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="Slicebox/js/modernizr.custom.46884.js"></script>
     <script src="animation.js"></script>
